crates/efr-cli/src/commands/config/snapshots/efr__commands__config__tests__a_switch_to_openai_api_says_that_openai_bills_the_key_per_token.snap
---
source: crates/efr-cli/src/commands/config/tests.rs
expression: "stdout.replace(&path.display().to_string(), \"<config.toml>\")"
---
<config.toml>: set model.provider = openai-api
note: OpenAI bills the API key per token; a ChatGPT plan does not cover it
the daemon is not running; it reads the file when it starts
