crates/efr-cli/src/commands/config/snapshots/efr__commands__config__tests__overrides_name_where_they_come_from.snap
---
source: crates/efr-cli/src/commands/config/tests.rs
expression: "effective(&ctx, &view)"
---
# /c/efr/config.toml (absent; every value is its default)
# Every key of config.toml with where its value comes from. efrd applies
# EFR_LOG, EFR_SCREEN and its flags on top; efrd --print-config shows them.
log = "info"  # default
screen = "auto"  # default
model.provider = "openai-subscription"  # default
model.name = (unset)  # default
model.effort = (unset)  # default
model.system_prompt = <1467 bytes>  # default
model.max_output_tokens = (unset)  # default
openai.originator = "efr"  # default
openai.models = (built in)  # default
openai.subscription_base_url = (unset)  # default
openai.api_base_url = (unset)  # default
openai.websocket = "auto"  # default
permissions.mode = "cautious"  # default
permissions.secret_paths = []  # default
permissions.rules = []  # default
shell.program = (unset)  # default
shell.login = true  # default
shell.idle_minutes = 5  # file
shell.sudo_cache = "keep"  # default
shell.interactive_timeout_minutes = 60  # default
conversation.max_queued = 16  # default
conversation.approval_timeout_secs = (unset)  # default
conversation.update_interval_ms = 200  # default
conversation.draft_interval_ms = 16  # default
conversation.tty_idle_hours = 12  # default
compaction.auto = true  # default
compaction.auto_at = 76  # default
sandbox.enabled = true  # default
sandbox.bwrap = (unset)  # default
sandbox.write_projects = "named"  # default
sandbox.write_roots = []  # default
sandbox.caches = ["~/.cargo", "~/.rustup", "~/.cache", "~/go/pkg/mod", "~/.npm", "~/.bun/install/cache", "~/.local/share/pnpm/store", "~/.m2/repository", "~/.gradle/caches"]  # default
sandbox.cache_mode = "tmp"  # default
sandbox.cache_days = 14  # default
sandbox.cache_max_gib = 20  # default
sandbox.mask = []  # default
sandbox.mask_globs = [".env", ".env.*", "!.env.example", "!.env.sample", "!.env.template"]  # default
sandbox.protect = []  # default
sandbox.env_deny = []  # default
sandbox.env_keep = []  # default
sandbox.promote_env = ["RUST_LOG", "RUST_BACKTRACE", "NODE_ENV", "DEBUG", "CI", "NO_COLOR", "FORCE_COLOR", "TZ", "LANG", "LC_*"]  # default
sandbox.export_deny = []  # default
sandbox.synced_dirs = ["~/Dropbox", "~/Nextcloud", "~/Sync", "~/OneDrive", "~/MEGA"]  # default
sandbox.surface_files = ["Makefile", "build.rs", "package.json", ".envrc", "rust-toolchain.toml", "justfile", "*.mk", "CMakeLists.txt", "setup.py", "pyproject.toml", "conftest.py", ".vscode/tasks.json", ".nvim.lua", ".exrc", ".mise.toml", ".tool-versions", "flake.nix", ".pre-commit-config.yaml", ".cargo/config.toml", ".cargo/config", ".npmrc", ".yarnrc.yml", ".pnpmfile.cjs"]  # default
sandbox.offline_hints = true  # default
sandbox.rebuildable = ["target", "node_modules", "dist", "build", ".venv"]  # default
snapshot.enabled = true  # default
snapshot.max_file_mib = 10  # default
snapshot.ignored = "small"  # default
snapshot.max_files = 20000  # default
snapshot.keep_turns = 50  # default
snapshot.max_age_days = 30  # default
render.theme = "gruvbox-dark"  # file
render.theme_dark = "catppuccin-mocha"  # default
render.theme_light = "catppuccin-latte"  # default
render.palette = (unset)  # default
render.motion = true  # default
render.turn_summary = true  # default
render.diff_lines = 20  # default
render.progress = "auto"  # default
render.turn_input = true  # default
render.colors.text = (unset)  # default
render.colors.muted = (unset)  # default
render.colors.accent = (unset)  # default
render.colors.heading = (unset)  # default
render.colors.link = (unset)  # default
render.colors.code = (unset)  # default
render.colors.success = (unset)  # default
render.colors.warning = (unset)  # default
render.colors.error = (unset)  # default
render.colors.quote = (unset)  # default
render.colors.diff.add = (unset)  # default
render.colors.diff.remove = (unset)  # default
render.colors.diff.hunk = (unset)  # default

[efr]
theme = "gruvbox-dark"  # /c/efr/config.toml
colour = "truecolor"  # COLORTERM
formatted = true  # stdout is a terminal
open_browser = true  # EFR_OPEN_BROWSER
log = "debug"  # EFR_LOG

[paths]
config = "/c/efr"  # EFR_HOME
data = "/d/efr"  # EFR_HOME
state = "/s/efr"  # EFR_HOME
runtime = "/run/user/1000/efr"  # EFR_HOME

[daemon]
socket = "/tmp/elsewhere/daemon.sock"  # daemon.json
config = "/c/efr/config.toml"  # admin.status
reload_error = "the config file is not valid: unknown field `idle_minuets`"  # shell.idle_minuets, line 4, column 1
restart_needed = ["screen"]  # restart efrd to apply
